# geck

./: geck.cabal
earth/: Program.fs  Startup.fs  api.fsproj
earth/Controllers/: HealthController.fs  PlantsController.fs  ValuesController.fs
earth/Properties/: launchSettings.json
raspberry/: Program.fs  Startup.fs
src/: Main.hs
water/: .gitignore  .nvimrc  Makefile  README.md  geck.cabal  main  main.c  stack.yaml
water/src/: Main.hs
